update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Saltego-trans-jarmiloj_69123
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69123-h/images/cover.jpg
 creator:
   author:
     agent_name: Forge, Jean
     gutenberg_agent_id: '55121'
     url: http://www.gutenberg.org/2009/agents/55121
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69123#Saltego-trans-jarmiloj
 gutenberg_issued: '2022-10-10'
 identifiers:
   gutenberg: '69123'
